feat: implements softskill table and relations
